<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.example.minyiyang.androidlabs.WeatherForecast">

    <ImageView
        android:id="@+id/ImageView_pic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@android:drawable/ic_menu_gallery" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/TextView_curtem"
        android:id="@+id/TextView_curtem" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/TextView_mintem"
        android:id="@+id/TextView_mintem" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/TextView_maxtem"
        android:id="@+id/TextView_maxtem" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/TextView_speed"
        android:id="@+id/TextView_speed" />

    <ProgressBar
        android:id="@+id/ProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:visibility="invisible" />


</LinearLayout>
